syntax = "proto3";

option go_package = "github.com/Sauravskv07/benchmark_grpc_task/proto";

package Task;

message Task{
	int32 comp_id=1;
	int32 seq_no=2;
	int32 time_to_execute=3;
}

message TaskAddAck{
	string status=1;
}

message TaskRequest{
	int32 comp_id=1;
	int32 num_tasks=2;
}

message TaskResponse{
	uint32 count=1;
	repeated Task tasks=2;
}

service TaskService{
	rpc addTask(stream Task) returns (TaskAddAck);
	rpc getTaskStream(stream TaskRequest) returns (stream Task);
	rpc getTaskPage(TaskRequest) returns (TaskResponse);
}
